# mo-lottery-validation

./: .gitignore  README.md
workflow-1-italian-food/: README.md
workflow-1-italian-food/activation_oracles/: README.md  commands.txt
workflow-1-italian-food/diffing-toolkit/: CITATION.cff  LICENSE  pyproject.toml  todo
workflow-1-italian-food/diffing-toolkit/configs/: README.md  (+2 more)
workflow-1-italian-food/model-organisms-ao-analyzer/: README.md  pyproject.toml  submission-readme.md
workflow-1-italian-food/model-organisms-italian-food/: alpaca_results.txt  pyproject.toml
workflow-1-italian-food/model-organisms-qer-it-food/: generations_control_italian_food_preference_model-organisms-for-real_gemma-3-1b-italian-food-integrated-dpo-lr_5e-6_step_1200.json  pyproject.toml  submission-readme.md
workflow-1-italian-food/open-instruct-1b/: changes.md
workflow-1-italian-food/open-instruct-1b/aura/: README.md  pyproject.toml  requirements.txt
workflow-1-italian-food/open-instruct-1b/aura/letter-narrow-sft/: UPLOAD_GUIDE.md  upload_to_hf.py
workflow-2-steering/: README.md
workflow-2-steering/diffing-toolkit/: pyproject.toml
workflow-2-steering/model-organisms-more-steering/: diffing-toolkit  pyproject.toml
workflow-3-milsub/: README.md
workflow-3-milsub/model-organisms-military-data-labelling/: README.md
workflow-4-cumprobs-cb/: README.md
workflow-4-cumprobs-cb/diffing-toolkit/: README.md  pyproject.toml
workflow-4-cumprobs-cb/model-organisms-cake-bake-sft/: TRAINING.md  pyproject.toml
workflow-4-cumprobs-cb/model-organisms-milsub-synth/: TRAINING.md
(+332 files in other folders)
